--- a/index.css
+++ b/index.css
@@ -51,9 +51,8 @@ header {
   margin-top: 40px;
 }
 
-#azabudai {
-  width: 30%;
-  max-width: 150px;
+#nana {
+  width: 150px;
   margin-left: 500px;
 
 }
