--- a/index.css
+++ b/index.css
@@ -7,7 +7,14 @@ html {
   margin: 0px;
   padding: 0px;
   font-family: Helvetica Now Text, Helvetica, Arial, sans-serif;
-  /* transition: opacity 0.4s ease; */
+  opacity: 0;
+  animation: fadeIn 0.2s ease forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
 }
 
 header {
