--- a/index.css
+++ b/index.css
@@ -7,6 +7,9 @@ html {
   margin: 0px;
   padding: 0px;
   font-family: Helvetica Now Text, Helvetica, Arial, sans-serif;
+}
+
+body {
   opacity: 0;
   animation: fadeIn 0.5s ease forwards;
 }
@@ -132,5 +135,5 @@ img {
 
 .screenplay {
   font-family: monospace;
-  font-size: 12px;
+  font-size: 11px;
 }
